# CloudDataOrchestrator

./: .gitignore  CLOUD_DEPLOY.md  LICENSE  README.md  SETUP.md  deploy.py  deploy_cloud.py  deploy_v2.py  docker-compose.yml  env.example  integrated_system.py  integrated_system_v2.py  monitor.py  monitor_dashboard.py  monitoring_report.json  pyproject.toml  requirements.txt  run_api.py  run_tests.py  test_all_systems.py
.github/workflows/: ci-cd.yml  deploy.yml
api/: README.md  __init__.py  main.py
cache/: cache_data.pkl
config/: config.json  settings.py
dashboard/: app.py  app_advanced.py  app_test.py
data_pipeline/: data_collector.py  data_collector_enhanced.py  data_collector_test.py  data_providers.py  requirements.txt
docker/: Dockerfile  scheduler.ini
infrastructure/: main.tf  main_v2.tf  variables.tf  variables_v2.tf
lambda/: data_handler.py  deploy.py  deploy.sh  requirements.txt  test_lambda_local.py  test_lambda_mock.py
logs/: data_collector_structured.json  integrated_system_structured.json  structured.json  test_structured.json  test_systems_structured.json
tests/: test_data_collector.py
utils/: alerts.py  anomaly_detector.py  cache.py  logger.py  metrics.py  resilience.py  validator.py
